# svroll-shell

./: Cargo.toml  LICENSE  README.md  build.rs  config.yaml  paho
.github/workflows/: release.yml
src/: basic.rs  client.csv  client_data.rs  command.rs  config.yaml  context.rs  data.csv  data.json  device_data.rs  lib.rs  main.rs  paho  random_value.rs  tcp_client.rs  tcp_data.rs  topic.json  traits.rs
src/mqtt/: basic.rs  client_data.rs  context.rs  device_data.rs  mod.rs
src/tcp/: mod.rs  tcp_client.rs  tcp_client_data.rs
src/traits/: client_traits.rs  mod.rs
