[package]
name = "paho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { version = "0.12.3", default-features=false, features=["bundled"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
csv = { version = "1.3"}
serde_json = "1.0"
clap = "4.5.4"
snowflake = "1.3.0"
dashmap = "5.5.3"
once_cell = "1.19"
chrono = "0.4.38"
[environment]
