[package]
name = "paho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { version = "0.12.3", default-features=false, features=["bundled"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = {version = "0.7.11",features = ["full"]}
tokio-stream = {version = "0.1.15",features = ["full"]}
csv = { version = "1.3"}
serde_json = "1.0"
clap = "4.5.4"
dashmap = "6.0.1"
once_cell = "1.19"
chrono = "0.4.38"
sysinfo = "0.30.13"
bytes = "1.6.1"
uuid = { version = "1.10.0", features = ["v4"] }
[environment]
