[package]
name = "iot-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { version = "0.12.3", default-features = false, features = [
    "bundled",
] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
csv = { version = "1.3" }
serde_json = "1.0"
clap = { version = "4.5.8", features = ["derive"] }
dashmap = "6.0.1"
once_cell = "1.19"
chrono = "0.4.38"
sysinfo = "0.31.2"
bytes = "1.6.1"
serde_yaml = "0.9.33"
comfy-table = "7.1.1"
[environment]
